# zendesk-mcp-server

./: Dockerfile  README.md  pyproject.toml  setup-mcp.sh
src/zendesk_mcp_server/: server.py  zendesk_client.py
src/zendesk_mcp_server/client/: __init__.py  base.py  fields.py  knowledge_base.py  tickets.py  triggers.py  users.py  views.py  webhooks.py
src/zendesk_mcp_server/tools/: __init__.py  fields.py  tickets.py  triggers.py  users.py  views.py  webhooks.py
